tests/fixtures/invalid/dict_in_bytes.py
# Cannot use 'in' with Dict[str, int] and Bytes
x: bool = {"a": 1} in b"hello"
